# dspai

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  cdo  docker-compose.yml
cmake/: build.mk  container.mk
doc/designs/: component-design.md
include/dspai/: component.hpp  execution.hpp  lifecycle.hpp
libs/comp/: CMakeLists.txt
libs/comp/include/dspai/comp/: component.hpp  execution.hpp  lifecycle.hpp
libs/comp/test/: component_test.cpp
tests/: component_test.cpp
